# focal

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .shellcheckrc  README.md  justfile  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
completions/: _focal  focal.bash
focal/: gh_ci_fail.py  gh_issue_graph.py  gh_pr_diff.py  gh_release_context.py  notebook.py  web_context.py  wip_context.py
lib/: core.sh  preview.sh
libexec/: api  ast  ci-fail  context  diff  file  files  issue-graph  pr-diff  release-context  search  symbol  tree  web  wip-context
tests/bash/: test_core.bats
tests/python/: test_github_wrappers.py  test_notebook.py  test_wip_context.py
